# simulated-traffic

./: .gitignore  README.md  folium_detailed_map.html  folium_map.html  openrouteservice_example_route.json  pyproject.toml
data/: excluded_workplaces.json  places_info.json
output/: generated_routes_2_days_1_person_per_building_10_people_2_free_time_places.json  small_example.json
src/: route_generator.py  test_combined_route.py
src/lib/: generating_routes.py  places.py  points_of_interest.py  random_time.py  residential_buildings.py
src/models/: __init__.py  person.py  place.py  position.py  route.py
tests/: test_simulated_traffic.py
